<resources>
    <string name="app_name">Pow\'R App</string>
    <string name="starter_fragment">POW\'R</string>
    <string name="battery_view_fragment">Battery View</string>
    <string name="battery">Charging Battery</string>
    <string name="performance_manager_message">Performance Manager Fragment</string>
    <string name="performance_manager">Performance Manager</string>
    <string name="button_description">Button Image</string>
    <string name="percent_format">x%</string>
    <string name="charging_battery">Charging battery</string>
    <string name="info_button_text">Information</string>
    <string name="statistics_button_text">Statistics</string>
    <string name="start_fragment">StarterFragment</string>
    <string name="about_fragment_title">AboutFragment</string>
    <string name="nav_about">About</string>
    <string name="nav_battery_title">Battery Info</string>
    <string name="nav_cpu_title">CPU Info</string>
    <string name="battery_temperature_feedback">Battery Temperature Feedback</string>
    <string name="status_string">Status</string>
    <string name="voltage_string">Voltage</string>
    <string name="voltage_value">Voltage Value</string>
    <string name="status_value">Status Value</string>
    <string name="health_value">Health Value</string>
    <string name="temperature_value">Temperature Value</string>
    <string name="temperature_string">Temperature</string>
    <string name="power_value">Power value</string>
    <string name="level_string">Level</string>
    <string name="level_value">Level value</string>
    <string name="power_string">Power</string>
    <string name="health_string">Health</string>
    <string name="default_temp_hint">38</string>
    <string name="default_cpu_temp">38℃</string>
    <string name="cpu_hardware">CPU Hardware</string>
    <string name="cpu_cores">CPU Cores</string>
    <string name="zero_progress">0</string>
    <string name="progress_20">20</string>
    <string name="progress_40">40</string>
    <string name="progress_60">60</string>
    <string name="progress_80">80</string>
    <string name="progress_100">100</string>
    <string name="brightness_control">Brightness Control</string>
    <string name="text_percentage">Text Percentage</string>
    <string name="screen_timeout">Screen Timeout</string>
    <string name="charging_status">Charging status</string>
    <string name="saver">Saver</string>
    <string name="statistics">Statistics</string>
    <string name="show_charge_options">Show charge options</string>
    <string name="ac_charger">AC Charger</string>
    <string name="usb_charger">USB Charger</string>
    <string name="wireless_charger">Wireless Charger</string>
    <string name="bluetooth_charger">Bluetooth Charger</string>
    <string name="overall_cpu_usage">Overall CPU Usage</string>
    <string name="cpu_min_frequency">CPU Min Frequency</string>
    <string name="cpu_current_frequency">CPU Current Frequency</string>
    <string name="cpu_max_frequency">CPU Max Frequency</string>
    <string name="cpu_frequency_ghz">CPU Frequency (GHz)</string>
    <string name="celsius_degree">℃</string>
    <string name="help">Help!</string>
    <string name="help_text">Frequency files may not exist on your device. This is marked in the corresponding places with the character <b>-</b>.</string>
    <string name="ok">OK</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="select_alarm_tone">Select Alarm Tone</string>
    <string name="set_volume">Set Volume</string>
    <string name="remind_me_to_switch_off_charger_adapter">Remind me to switch OFF\n charger adapter</string>
    <string name="select_battery_level">Select Battery Level</string>
    <string name="down_limit_battery_level">Down Limit Battery Level</string>
    <string name="up_limit_battery_level">Up Limit Battery Level</string>
    <string name="launch_app_when_power_n_connected">Launch app when power\n connected</string>
    <string name="set_alarm">Set Alarm</string>
    <string name="battery_settings">Battery Settings</string>
    <string name="_50_percent">50%</string>
    <string name="close">Close</string>
    <string name="start_monitoring_service">Start Monitoring Service</string>
    <string name="statistics_help">The processor load monitoring service aims to inform you about the current status of the work submitted by the processor in order to further optimize it.</string>
    <string name="time">Time</string>
    <string name="cpu_temperature">CPU Temperature</string>
    <string name="battery_percent">Battery Percent</string>
    <string name="battery_temperature">Battery Temperature</string>
    <string name="cpu_load">CPU Load</string>
    <string name="turn_off_doze_mode">Turn off Doze mode</string>
    <string name="decline">Decline</string>
    <string name="allow">Allow</string>
    <string name="dismiss">Dismiss</string>
    <string name="doze_mode_title">Doze mode</string>
    <string name="doze_mode_warning">Disabling <b>Doze</b> will exclude the application from saving battery power while your device is not being used for a long period of time. For more information, read the information below.</string>
    <string name="doze_mode_info">If a user leaves a device unplugged and stationary for a period of time, with the screen off, the device enters Doze mode. In Doze mode, the system attempts to conserve battery by restricting apps\' access to network and CPU-intensive services. It also prevents apps from accessing the network and defers their jobs, syncs, and standard alarms.</string>
    <string name="app_standby_bucket">App Standby Bucket</string>
    <string name="active">Active Bucket</string>
    <string name="active_info">An app is in the <b>active</b> bucket if the user is currently using the app or very recently used the app. If an app is in the active bucket, the system does not place any restrictions on the app\'s jobs or alarms.</string>
    <string name="working_set">Working Set Bucket</string>
    <string name="working_set_info">An app is in the <b>working set</b> bucket if it runs often but it is not currently active. For example, a social media app that the user launches most days is likely to be in the working set. Apps are also promoted to the working set bucket if they\'re used indirectly.</string>
    <string name="rare">Rare Bucket </string>
    <string name="rare_info">An app is in the <b>rare</b> bucket if it is not often used. For example, a hotel app that the user only runs while they\'re staying at that hotel might be in the rare bucket. If an app is in the rare bucket, the system imposes strict restrictions on its ability to run jobs and trigger alarms. The system also limits the app\'s ability to connect to the internet.</string>
    <string name="frequent">Frequent</string>
    <string name="frequent_info">An app is in the frequent bucket if it is used regularly, but not necessarily every day. For example, a workout-tracking app that the user runs at the gym might be in the frequent bucket. If an app is in the frequent bucket, the system imposes stronger restrictions on its ability to run jobs and trigger alarms.</string>
    <string name="restricted">Restricted</string>
    <string name="restricted_info">Your app is less likely to be placed in the restricted bucket if your app uses system resources more responsibly. Also, the system places your app in a less restrictive bucket if the user interacts directly with your app."</string>
    <string name="current_frequency_khz">Current Frequency [KHz]</string>
    <string name="current_scaling_governor">Current scaling governor</string>
    <string name="max">Max</string>
    <string name="max_freq">Max Freq</string>
    <string name="min">Min</string>
    <string name="min_freq">Min Freq</string>
    <string name="max_frequency">Max Frequency</string>
    <string name="min_frequency">Min Frequency</string>
    <string name="scaling">Scaling</string>
    <string name="choose_governor">Choose Governor</string>
    <string name="current_frequency">Current Frequency</string>
    <string name="refresh">Refresh</string>
    <string name="refresh_alert_msg">To see the newly set values, please press the refresh button after 2 seconds.</string>
    <string name="error_when_changing_freq">The maximum frequency of the processor must be higher than the minimum frequency!</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="wifi">WiFi</string>
    <string name="no_ble_adapter">This device does not support Bluetooth!</string>
    <string name="mobile_data">Mobile Data</string>
    <string name="battery_saver">Battery Saver</string>
    <string name="processor_information">Processor Information</string>
    <string name="information">Information</string>
    <string name="title">Title</string>
    <string name="your_teacher_helper_today"><![CDATA[Your teacher & helper today!]]></string>
    <string name="helper_title">Here to help you!</string>
    <string name="helper_message">Pow\'R will give you the information you need to know about your phone\'s battery and processor.\n Just be a little curious!</string>
    <string name="second_introduction_message">Pow\'R has separate sections dedicated to battery and processor, because if you want to find out details before using the application about the characteristics of the two components, we invite you to play a little with the buttons below.</string>
    <string name="information_message">Technical information is often difficult to understand,\n isn\'t it?\n With the right help, you will be able to understand notions such as the health of your device\'s battery, what it means to change the processor frequency or what a governor is, all embedded in a single application.</string>
    <string name="battery_info">Battery</string>
    <string name="cpu">CPU</string>
    <string name="cpu_info">The best way to think about a CPU is like the brain of the machine. It\'s highly flexible, keeps the show on the road, and is capable of handling a wide range of tasks. The CPU inside your phone is responsible for running all the logic and operations required by the Android operating system as well as your apps.</string>
    <string name="battery_health">Battery Health</string>
    <string name="battery_health_info">The Battery Health screen includes information on maximum battery capacity and peak performance capability.\n Maximum battery capacity measures the device battery capacity relative to when it was new.</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_info">The cold temperature increases the internal resistance and reduces your phone\'s capacity significantly. Battery Temperature too low the phone will soon power off. The battery is the most important component of your mobile phone and it will shut down soon when the temperature is very low.\n </string>
    <string name="frequency">Frequency</string>
    <string name="frequency_info">A CPU\'s clock speed represents how many cycles per second it can execute. Clock speed is also referred to as clock rate, PC frequency and CPU frequency. This is measured in gigahertz, which refers to billions of pulses per second and is abbreviated as GHz.</string>
    <string name="governor">Governor</string>
    <string name="governor_info">A CPU governor controls how the CPU raises and lowers its frequency in response to the demands the user is placing on their device. Governors have a large impact on performance and power save.</string>
    <string name="core">Core</string>
    <string name="core_info">In summary, a core is a small CPU or processor built into a big CPU or CPU socket. It can independently perform or process all computational tasks. From this perspective, we can consider a core to be a smaller CPU or a smaller processor within a big processor.</string>
</resources>