<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/navigation"
    app:startDestination="@id/starterFragment">

    <fragment
        android:id="@+id/batteryViewFragment"
        android:name="com.example.powerconsumptionapp.batteryview.BatteryViewFragment"
        android:label="@string/battery_view_fragment"
        tools:layout="@layout/fragment_battery_view"/>
    <fragment
        android:id="@+id/CPUInfo"
        android:name="com.example.powerconsumptionapp.cpuinfo.CPUInfoFragment"
        android:label="@string/nav_cpu_title"
        tools:layout="@layout/fragment_c_p_u_info"/>
    <fragment
        android:id="@+id/performanceManagerFragment"
        android:name="com.example.powerconsumptionapp.performancemanager.PerformanceManagerFragment"
        android:label="@string/performance_manager"
        tools:layout="@layout/fragment_performance_manager"/>
    <fragment
        android:id="@+id/starterFragment"
        android:name="com.example.powerconsumptionapp.startfragment.StarterFragment"
        android:label="@string/start_fragment"
        tools:layout="@layout/fragment_start">
        <action
            android:id="@+id/action_starterFragment_to_performanceManagerFragment"
            app:destination="@id/performanceManagerFragment" />
        <action
            android:id="@+id/action_starterFragment_to_batteryViewFragment"
            app:destination="@id/batteryViewFragment" />
        <action
            android:id="@+id/action_starterFragment_to_CPUInfo"
            app:destination="@id/CPUInfo" />
        <action
            android:id="@+id/action_starterFragment_to_aboutFragment"
            app:destination="@id/aboutFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="com.example.powerconsumptionapp.about.AboutFragment"
        android:label="@string/about_fragment_title"
        tools:layout="@layout/fragment_about"/>
</navigation>