<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".about.AboutFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_bg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:padding="@dimen/default_gap"
                android:textSize="@dimen/default_size" />

            <androidx.cardview.widget.CardView
                android:id="@+id/helperCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_margin_buttons"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/your_teacher_helper_today"
                    android:padding="@dimen/default_gap" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_gap"
                android:elegantTextHeight="true"
                android:gravity="center"
                android:padding="@dimen/default_gap"
                android:text="@string/information_message"/>

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/battery_svgrepo_com__2_"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elegantTextHeight="true"
                android:gravity="center"
                android:padding="@dimen/default_gap"
                android:text="@string/second_introduction_message" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/batteryInformationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/indigo"
                android:text="@string/battery_info"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/batteryChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:padding="@dimen/default_margin_buttons"
                    app:chipSpacingHorizontal="@dimen/default_margin_buttons"
                    app:singleLine="true"
                    app:singleSelection="true">

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cpuInformationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:backgroundTint="@color/indigo"
                android:text="@string/cpu"
                android:theme="@style/Theme.MaterialComponents.Light"
                android:textColor="@color/white"
                app:cornerRadius="20dp" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/cpuChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:singleSelection="true"
                    android:visibility="gone"
                    android:padding="@dimen/default_margin_buttons"
                    app:chipSpacingHorizontal="@dimen/default_margin_buttons"
                    app:singleLine="true">

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

        </LinearLayout>

    </ScrollView>

</layout>
