<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_battery"
                android:layout_gravity="center"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp">

                <TextView
                    android:id="@+id/currentFrequencyTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_size"
                    android:padding="@dimen/default_margin_buttons"
                    android:hint="@string/current_frequency_mhz"/>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/currentGovernorTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_margin_battery"
                android:textColor="@color/gray"
                android:textSize="@dimen/settings_text_size"
                android:hint="@string/current_scaling_governor"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_battery"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin_battery"
                    android:layout_marginVertical="@dimen/default_margin_buttons"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/default_margin_buttons"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_gravity="center"
                            android:padding="@dimen/default_margin_buttons"
                            android:textSize="@dimen/default_size"
                            android:text="@string/max"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/maxFrequencyTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/deep_purple_light"
                            android:hint="@string/max_freq"
                            android:theme="@style/Theme.MaterialComponents.Light"
                            app:cornerRadius="20dp" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_margin_battery"
                    android:layout_marginVertical="@dimen/default_margin_buttons"
                    android:layout_weight="1"
                    app:cardCornerRadius="15dp"
                    app:cardElevation="7dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="@dimen/default_margin_buttons"
                        android:useDefaultMargins="true">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textSize="@dimen/default_size"
                            android:layout_gravity="center"
                            android:padding="@dimen/default_margin_buttons"
                            android:text="@string/min"/>

                        <com.google.android.material.button.MaterialButton
                            android:id="@+id/minFrequencyTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/deep_purple_light"
                            android:hint="@string/min_freq"
                            android:theme="@style/Theme.MaterialComponents.Light"
                            app:cornerRadius="20dp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_battery"
                app:cardCornerRadius="15dp"
                app:cardElevation="7dp" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:padding="@dimen/horizontal_margin"
                        android:layout_weight="2"
                        android:textSize="@dimen/settings_text_size"
                        android:text="@string/max_frequency"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>

</layout>